issue #32: fixing padding on mobile and making top menu fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,13 @@
-body{
-    padding-top:70px;
+body {
+	padding-top: 70px;
+}
+.navbar-fixed-top {
+	position: fixed;
+	margin: 0;
+}
+.navbar-fixed-top .navbar-inner {
+	padding-left: 0;
+	padding-right: 0;
 }
 body.install{
     padding-top:20px;
